# file-server-system

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  db_setup.sql
src/: app_config.rs  main.rs
src/dao/: db_privilege_store.rs  login_verification.rs  mod.rs  privilege_store.rs
src/endpoints/: authentication.rs  download.rs  mod.rs  system_operations.rs  upload.rs
src/endpoints/authentication/: authentication.rs
src/endpoints/system_operations/: delete.rs  directory.rs  download.rs  get_file_structure.rs  mod.rs  rename.rs  upload.rs
src/models/: auth_models.rs  auth_user.rs  mod.rs
src/models/authentication/: auth_models.rs  auth_user.rs  mod.rs
src/models/file_structure/: directory_create_request.rs  directory_tree.rs  file_structure_request.rs  mod.rs
src/models/system_operations/: delete_file_request.rs  download_file_request.rs  mod.rs  rename_item_request.rs  upload_file_request.rs
src/services/: authentication_service.rs  directory_service.rs  mod.rs
src/services/file_structure/: delete_service.rs  directory_service.rs  file_service.rs  file_utilities.rs  mod.rs  path_service.rs  privilege_service.rs  rename_service.rs
src/services/locking/: directory_locking_manager.rs  mod.rs
src/tests/: mod.rs  test_structure.rs
src/tests/endpoint/: delete_endpoints_tests.rs  download_endpoint_tests.rs  get_file_structure_tests.rs  mod.rs  rename_endpoint_tests.rs  upload_endpoint_tests.rs
src/tests/service/: directory_service_tests.rs  file_service_tests.rs  mod.rs  rename_service_tests.rs
src/utilities/: file_utilities.rs  mod.rs
