[package]
name = "file-server-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
futures-util = "0.3"    # For async stream handling
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"
uuid = { version = "1.12.1", features = ["v4"] }
