[package]
name = "file-server-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7.2"
actix-service = "2.0.2"
jsonwebtoken = "9.3.0"
futures-util = "0.3"    # For async stream handling
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
futures = "0.3.31"
serde_json = "1.0.137"
dotenv = "0.15.0"
once_cell = "1.20.2"
bcrypt = "0.16.0"
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7.12"
actix-cors = "0.7.0"
tempfile = "3.15.0"
mockall = "0.11"
async-trait = "0.1"
bytes = "1.9.0"
env_logger = "0.11.6"
cargo-llvm-cov = "0.6.16"
multipart = "0.18.0"
